--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "SET NODE_ENV=development&&nodemon server.js",
+    "start:prod": "NODE_ENV=production node app.js",
     "debug": "ndb server.js"
   },
   "author": "",
