--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "natours",
+  "name": "OpenDesksApi",
   "version": "1.0.0",
   "engines": {
     "node": ">=10.0.0"
@@ -8,7 +8,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production node app.js",
+    "start:prod": "NODE_ENV=production node server.js",
     "debug": "ndb server.js"
   },
   "author": "",
