--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hpp": "^0.2.3",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
